--- a/css/faq.css
+++ b/css/faq.css
@@ -1,44 +1,47 @@
-
-@import url(https://fonts.googleapis.com/css?family=Lato);
-
-@import url(https://fonts.googleapis.com/css?family=Open Sans);
+@import url('https://fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 .faq-heading {
-  font-family: Lato;   
+  font-family: 'Lato', sans-serif;
   font-weight: 400;
   font-size: 19px;
-   -webkit-transition: text-indent 0.2s;
+  transition: text-indent 0.2s;
   text-indent: 20px;
   color: #333;
 }
 
 .faq-text {
-  font-family: Open Sans;   
+  font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   color: #919191;
-  width:95%;
-  padding-left:20px;
-  margin-bottom:30px;
+  width: 95%;
+  padding-left: 20px;
+  margin-bottom: 30px;
 }
 
 .faq {
-  width: 1000px;
+  width: 100%;
+  max-width: 1000px;
   margin: 0 auto;
   background: white;
   border-radius: 4px;
   position: relative;
   border: 1px solid #E1E1E1;
 }
+
 .faq label {
   display: block;
   position: relative;
   overflow: hidden;
   cursor: pointer;
   height: 56px;
-  padding-top:1px;
- 
+  padding-top: 1px;
   background-color: #FAFAFA;
   border-bottom: 1px solid #E1E1E1;
+  transition: height 0.8s;
+  -webkit-transition: height 0.8s;
+  transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  -webkit-transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .faq input[type="checkbox"] {
@@ -46,11 +49,11 @@
 }
 
 .faq .faq-arrow {
-  width: 5px;
-  height: 5px;
-  transition: -webkit-transform 0.8s;
+  width: 10px;
+  height: 10px;
   transition: transform 0.8s;
-  transition: transform 0.8s, -webkit-transform 0.8s;
+  -webkit-transition: transform 0.8s;
+  transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
   -webkit-transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
   border-top: 2px solid rgba(0, 0, 0, 0.33);
   border-right: 2px solid rgba(0, 0, 0, 0.33);
@@ -58,31 +61,30 @@
   position: relative;
   top: -30px;
   right: 27px;
+  transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
 }
 
- .faq input[type="checkbox"]:checked + label > .faq-arrow {
-  transition: -webkit-transform 0.8s;
-  transition: transform 0.8s;
-  transition: transform 0.8s, -webkit-transform 0.8s;
-  -webkit-transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+.faq input[type="checkbox"]:checked + label > .faq-arrow {
+  transform: rotate(135deg);
   -webkit-transform: rotate(135deg);
-          transform: rotate(135deg);
 }
- .faq input[type="checkbox"]:checked + label {
-  display: block;
-  background: rgba(255,255,255,255) !important;
+
+.faq input[type="checkbox"]:checked + label {
+  background: rgba(255, 255, 255, 1);
   color: #4f7351;
   height: 225px;
   transition: height 0.8s;
+  -webkit-transition: height 0.8s;
+  transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
   -webkit-transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
- .faq input[type='checkbox']:not(:checked) + label {
-  display: block;
-  transition: height 0.8s;
+.faq input[type="checkbox"]:not(:checked) + label {
   height: 60px;
+  transition: height 0.8s;
+  -webkit-transition: height 0.8s;
+  transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
   -webkit-transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
