--- a/src/Assets/css/variable.css
+++ b/src/Assets/css/variable.css
@@ -338,3 +338,17 @@ h3 {
   list-style-type: disc;
   margin-left: 20px;
 } */
+
+.webpage-container {
+  width: 100%;
+  height: 100vh; /* Full viewport height */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.webpage-container iframe {
+  width: 100%;
+  height: 100%;
+  border: none; /* Remove default iframe border */
+}
