--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -202,3 +202,51 @@ main > *:first-child {
 .fa fa-times{
   height: 100%;
 }
+/* .mock {
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid #ddd;
+} */
+/* Add this to your CSS file */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropbtn {
+  background-color: transparent;
+  color: #000000;
+  text-transform: capitalize;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3f3f3f;
+  color: #ffffff;
+}
