--- a/src/Assets/css/variable.css
+++ b/src/Assets/css/variable.css
@@ -11,6 +11,7 @@
     --sonic-silver: #787878;
     --blue-crayola: #0d6dfd;
     --cultured: #f2f3f7;
+    --gradient-color: linear-gradient(90deg, #E94057, #F27121, #f030ea);
     --white: #ffffff;
 
     --fs-1: 38px;
@@ -341,7 +342,7 @@ h3 {
 
 .webpage-container {
   width: 100%;
-  height: 100vh; /* Full viewport height */
+  height: 130vh; /* Full viewport height */
   display: flex;
   justify-content: center;
   align-items: center;
