--- a/src/Assets/css/variable.css
+++ b/src/Assets/css/variable.css
@@ -1,10 +1,7 @@
-
-
-
 /* =========== VARIABLES =========== */
 :root{
     --red-orange-color-wheel: #343333ef;
-    --ultramarine-blue: #0062ff;
+    --ultramarine-blue: linear-gradient(90deg, rgba(243,114,96,1) 0%, rgba(166,101,233,1) 27%, rgba(166,101,233,1) 62%, rgba(252,69,157,1) 100%);
     --lavender-blue: #d2dafe;
     --oxford-blue: #050e38;
     --light-gray: #cccccc;
@@ -137,7 +134,7 @@
 }
 
 .footer-logo h1 {
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 
@@ -193,9 +190,9 @@
     width: 100%; /* Set the width to 100% of its container */ /* Set a maximum width */
     height: 100%; /* Maintain aspect ratio */
      /* Ensures it behaves like a block element */
-    margin: 2 auto; /* Center the video horizontally */
+    /* margin: 2 auto; Center the video horizontally */
     /* Optional: Add a border */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for visual effect */
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); Optional: Add a shadow for visual effect */
   }
 
   /* -----------------------------Navbar----------------------------- */
