--- a/src/components/course/course.css
+++ b/src/components/course/course.css
@@ -53,7 +53,7 @@ h3 {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-gkjgk
+gkjg
 p {
     font-size: 14px;
    
