--- a/src/components/course/course.css
+++ b/src/components/course/course.css
@@ -3,7 +3,7 @@
     background-color: #f5f5f5;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items:
 } */
 
 .mock-container {
